--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,2 @@
-<div class="large-12 columns">
-  <h1>Welcome to my Home Page</h1>
-  </div>
-  <p>Hello, I am Christopher Claiborne and I am interested in becoming a web developer using MVC patters and front-end frameworks.</p>
-</div>
-
-
+<h1>Home Page</h1>
+<p>Welcome to my home page.</p>
