--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h2>Chris Claiborne</h2>
-      Web Developer experienced in Ruby of Rails MVC pattern at CodeFellows in Seattle, WA.
+      Web Developer experienced in Ruby on Rails MVC pattern at CodeFellows in Seattle, WA.
 <div class = "a page"></div>
