--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
   <section class="top-bar-section">
     <ul class="right">
       <li class="divider"></li>
+      <li><%= link_to "Browse Posts", posts_path %></li>
+      <li class="divider"></li>
       <li><%= link_to "Browse Projects", projects_path %></li>
       <li class="divider"></li>
           <% if user_signed_in? %>
