--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,4 +31,4 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path, id: "new_link", remote: "true" %>
