--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,12 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name %><br/>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :technologies %><br>
+    <%= f.label :technologies %><br/>
     <%= f.text_field :technologies %>
+  </div>
+  <div class="field">
+    <%= f.label :pic %><br/>
+    <%= f.file_field :pic %>
   </div>
   <div class="actions">
     <%= f.submit %>
